Invalidate empty inptu